--- a/app/assets/styles/utilities/mixins.scss
+++ b/app/assets/styles/utilities/mixins.scss
@@ -289,34 +289,6 @@
   padding-left: $spacing;
 }
 
-@mixin next-read-section($background-color) {
-  position: relative;
-  background-color: $background-color;
-  padding-top: 40px;
-  padding-bottom: 40px;
-
-  /**
-   * Dirty hack the full width background
-   */
-  &::before,
-  &::after {
-    content: '';
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    background: inherit;
-    width: $container-width;
-  }
-
-  &::before {
-    right: 100%;
-  }
-
-  &::after {
-    left: 100%;
-  }
-}
-
 @mixin font-smoothing {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -421,4 +393,48 @@ $image-loader-size: 30px;
     font-family: 'Helvetica', Arial, sans-serif;
   }
 }
+
+// -----------------------------------------------------------------------------
+// LAYOUT MIXINS
+// -----------------------------------------------------------------------------
+@mixin content-width($method: 'margin') {
+  @include media('>desktop-laptop') {
+    #{$method}-right: $sidebar-width + $container-spacing;
+  }
+}
+
+@mixin article-body-width($method: 'margin') {
+  @include media('>desktop-laptop') {
+    #{$method}-right: $sidebar-width + (3 * $container-spacing);
+  }
+}
+
+@mixin container-gutters($size: 'small') {
+  @if ($size == 'small') {
+    $gutter: $container-spacing;
+  } @else {
+    $gutter: $container-spacing * 2;
+  }
+
+  padding-left: $gutter;
+  padding-right: $gutter;
+}
+
+@mixin main-layout {
+  width: 100%;
+
+  @include media('<=tablet-portrait') {
+    max-width: 650px;
+  }
+
+  @include media('>tablet-portrait', '<=desktop-laptop') {
+    width: 80%;
+  }
+
+  @include media('<=desktop-laptop') {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
 
