--- a/app/assets/styles/base/advertising.scss
+++ b/app/assets/styles/base/advertising.scss
@@ -10,17 +10,12 @@
   box-sizing: content-box;
 }
 
-.ad a {
+.ad a,
+.ad img,
+.ad object {
   display: inline-block;
   margin-bottom: 0 !important;
   background: none !important;
-}
-
-.ad img,
-.ad object {
-  @include media('>desktop-laptop') {
-    display: block;
-  }
 }
 
 /**
@@ -51,23 +46,14 @@
 #content_board,
 #bottom_board {
   @include edges('pull');
+  text-align: center;
 
-  @include media('<=tablet-landscape') {
-    text-align: center; /* 1 */
-
-    > div,
-    > a,
-    > img,
-    > object {
-      display: inline-block; /* 1 */
-      text-align: left;
-    }
-
-  }
-
-  @include media('>tablet-landscape') {
-    margin-left: 0;
-    margin-right: 0;
+  > div,
+  > a,
+  > img,
+  > object {
+    display: inline-block; /* 1 */
+    text-align: left;
   }
 }
 
@@ -113,6 +99,16 @@
 }
 
 /**
+ * Skyscraper Advert
+ * Note: Inserted with JS into article body
+ */
+#side_ad {
+  width: 300px;
+  text-align: right;
+}
+
+
+/**
  * Rectangle Advert
  * Note: Inserted with JS into article body
  */
@@ -125,6 +121,7 @@
     margin-right: 0;
   }
 }
+
 
 /**
  * Rectangle Adverts first in article
