add font-smoothing and loading-spinner to sassdoc

--- a/app/assets/styles/utilities/mixins.scss
+++ b/app/assets/styles/utilities/mixins.scss
@@ -273,12 +273,18 @@
   @return mix(black, $color, $percentage);
 }
 
-
+/// Helper for thinner text, only supported by -moz-osx and -webkit
 @mixin font-smoothing {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
+/**
+ * Loading spinner
+ * 1. Absolute centering of the loader
+ * 2. Displayed
+ * 3. On top of content
+ */
 
 /// Transition duration for fade in
 /// @type Duration
@@ -290,12 +296,8 @@ $image-transition: 0.25s;
 /// @group images
 $image-loader-size: 30px;
 
-/**
- * Loading spinner
- * 1. Absolute centering of the loader
- * 2. Displayed
- * 3. On top of content
- */
+/// CSS based loading Spinner for loading animations
+/// @access public
 @mixin loading-spinner {
   &::after {
     content: '';
