--- a/app/assets/styles/base/animations.scss
+++ b/app/assets/styles/base/animations.scss
@@ -3,3 +3,17 @@
     transform: rotate(1turn);
   }
 }
+
+@keyframes blink {
+  0% {
+    opacity: 1;
+  }
+
+  50% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
