--- a/app/assets/styles/utilities/mixins.scss
+++ b/app/assets/styles/utilities/mixins.scss
@@ -271,6 +271,12 @@
   @return mix(black, $color, $percentage);
 }
 
+/// Overlay Gradient for images for a better contrast to the text on the image
+/// @param {Number} $percentage - percentage of top position
+@mixin image-gradient($percentage: 65%) {
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0) $percentage, #000 100%);
+}
+
 /// Helper for thinner text, only supported by -moz-osx and -webkit
 @mixin font-smoothing {
   -webkit-font-smoothing: antialiased;
