Teaser: add Meinung and Publireportage teaser variations

--- a/app/assets/styles/utilities/variables.scss
+++ b/app/assets/styles/utilities/variables.scss
@@ -124,6 +124,12 @@ $very-light-grey: #f8f8f8;
 $letterbox-background: #333;
 
 
+/// Publireportage theme
+/// Used for the Publireportage theme (Teasers)
+/// @group colors
+/// @type Color
+$publi-theme: #666;
+
 // -----------------------------------------------------------------------------
 // BREAKPOINTS AND MEDIA-EXPRESSIONS
 // -----------------------------------------------------------------------------
