LatestArticles: create first draft component pieces and get toggling working (without async loading)

--- a/app/assets/styles/utilities/variables.scss
+++ b/app/assets/styles/utilities/variables.scss
@@ -151,6 +151,8 @@ $breakpoints: (
   'advertising-iphone6-portrait': 414px,
   'advertising-skyscraper': 1400px,
   'full-screen-space': 1700px,
+  'grid-break-1': 500px,
+  'grid-break-2': 46.25em
 );
 
 
