--- a/app/assets/styles/base/advertising.scss
+++ b/app/assets/styles/base/advertising.scss
@@ -58,6 +58,19 @@
 }
 
 /**
+ * Top Board advert
+ */
+#top_board {
+  @include media('<=mobile-portrait') {
+    margin-bottom: 30px;
+  }
+
+  @include media('>mobile-portrait') {
+    margin-bottom: 40px;
+  }
+}
+
+/**
  * Content Board advert
  * 1. Explicit width required as flexbox also applied in layout.scss
  */
@@ -72,9 +85,9 @@
 }
 
 /**
- * Top Board advert
+ * Content boards which break grid
  */
-#top_board {
+.ad--grid-content-board {
   @include media('<=mobile-portrait') {
     margin-bottom: 30px;
   }
@@ -107,7 +120,6 @@
   text-align: right;
 }
 
-
 /**
  * Rectangle Advert
  * Note: Inserted with JS into article body
@@ -121,7 +133,6 @@
     margin-right: 0;
   }
 }
-
 
 /**
  * Rectangle Adverts first in article
