--- a/app/assets/styles/utilities/variables.scss
+++ b/app/assets/styles/utilities/variables.scss
@@ -162,10 +162,8 @@ $breakpoints: (
 ///   - list is used for *or* conditions (e.g. retina)
 $media-expressions: (
   'print': 'print',
-  'retina': (
-    '(-webkit-min-device-pixel-ratio: 2)',
-    '(min-resolution: 192dpi)'
-  )
+  'retina': ('(-webkit-min-device-pixel-ratio: 2)',
+    '(min-resolution: 192dpi)')
 );
 
 
