Make TopicBody work once more

--- a/app/assets/styles/utilities/mixins.scss
+++ b/app/assets/styles/utilities/mixins.scss
@@ -445,7 +445,7 @@ $image-loader-size: 30px;
     padding-bottom: $new-padding * 1%;
   }
 
-  .picture__img {
+  .picture__source {
     width: $image-width * 1%;
     margin-left: -$margin-left * 1%;
     max-width: none;
