added initial net metrix pageview tracking to all pages

--- a/app/includes/__head_bottom.html
+++ b/app/includes/__head_bottom.html
@@ -66,4 +66,29 @@
 <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 
 {# Tracking has to be loaded synchronously before page's body is rendered. #}
-<!-- <script src="{{ staticBasePath }}/client/tracking.bundled.js"></script> -->
+<script src="{{ staticBasePath }}/client/tracking.bundled.js"></script>
+<script>
+  if (typeof window.AZTracker !== 'undefined' && window.AZTracker.trackPageView) {
+    window.AZTracker.trackPageView({
+      domain: 'aznetz',
+      path: {
+        product: 'live',
+
+        // exclude as it is already contained in url path
+        // sitename: 'styleguide',
+
+        // component name event tracking, "page" or "empty" for pageview tracking
+        // @TODO: adjust in concept
+        // view: 'page',
+
+        path: window.location.pathname,
+        event: 'pageview',
+        id: null,
+        index: null
+      },
+      referer: document.referer,
+      screenWidth: screen.width,
+      screenHeight: screen.height
+    });
+  }
+</script>
