--- a/app/assets/styles/base/advertising.scss
+++ b/app/assets/styles/base/advertising.scss
@@ -2,10 +2,19 @@
 
 // scss-lint:disable all
 
+$skyscraper-width: 300px;
+
 /**
  * AdTech ad content
  * Note: Added inside <div>s with by ad script
+ * 1. Above everything but the header
+ * 2. Pop-out ads above other ads
  */
+.ad {
+  position: relative;
+  z-index: 50; /* 1 */
+}
+
 .ad * {
   box-sizing: content-box;
 }
@@ -21,8 +30,14 @@
 /**
  * Skyscraper Ad sidebar
  * 1. Hidden until there is space for it
- * 2. Fixed to the right-hand-side
+ * 2. Push to the right-hand-side
+ * 3. Above other ads (for pop-out ad)
+ * 4. Use container as a base when centering
  */
+ .container--skyscraper {
+  position: relative;
+ }
+
 .ad--skyscraper {
   @include media('<=advertising-skyscraper') {
     display: none; /* 1 */
@@ -30,10 +45,9 @@
 
   @include media('>advertising-skyscraper') {
     position: absolute; /* 2 */
-    width: 300px;
-    top: auto;
-    right: 10px;
+    z-index: 51; /* 3 */
     height: 600px;
+    left: calc(100% + 30px);
   }
 }
 
@@ -89,11 +103,13 @@
  */
 .ad--grid-content-board {
   @include media('<=mobile-portrait') {
-    margin-bottom: 30px;
+    margin-top: 30px;
+    margin-bottom: 50px;
   }
 
   @include media('>mobile-portrait') {
-    margin-bottom: 40px;
+    margin-top: 40px;
+    margin-bottom: 60px;
   }
 }
 
@@ -116,8 +132,7 @@
  * Note: Inserted with JS into article body
  */
 #side_ad {
-  width: 300px;
-  text-align: right;
+  width: $skyscraper-width;
 }
 
 /**
