added empty noscript tag

--- a/app/includes/__head_bottom.html
+++ b/app/includes/__head_bottom.html
@@ -68,3 +68,6 @@
 {# Track on loading of page. #}
 <script src="{{ staticBasePath }}/client/tracking.bundled.js"></script>
 <script src="{{ staticBasePath }}/client/scripts/tracking/netmetrix.js"></script>
+<noscript id="trackingNoScript">
+  <!-- @TODO: request tag in img -->
+</noscript>
