--- a/app/includes/__head_bottom.html
+++ b/app/includes/__head_bottom.html
@@ -69,5 +69,5 @@
 <script src="{{ staticBasePath }}/client/tracking.bundled.js"></script>
 <script src="{{ staticBasePath }}/client/scripts/tracking/netmetrix.js"></script>
 <noscript id="trackingNoScript">
-  <!-- @TODO: request tag in img -->
+  <!-- @TODO: request tag in <img src=""...>: Use NetMetrixTracker._getTag() server-side. (see routingNodeIncludes.js for definition of nunjucks variables) -->
 </noscript>
