ArticleHeader: adds Meinung variation into styleguide

--- a/app/assets/styles/utilities/mixins.scss
+++ b/app/assets/styles/utilities/mixins.scss
@@ -70,6 +70,10 @@
   @include media('≤mobile-portrait') {
     font-size: 26px;
   }
+
+  @include media('≤desktop-laptop') {
+    font-size: 30px;
+  }
 }
 
 
