--- a/app/includes/__head_bottom.html
+++ b/app/includes/__head_bottom.html
@@ -52,7 +52,8 @@
       'kaltura_frontend_video_player_id': {{kaltura_frontend_video_player_id}},
       'kaltura_frontend_adless_video_player_id': {{kaltura_frontend_adless_video_player_id}},
       'kaltura_mediathek_video_player_id': {{kaltura_mediathek_video_player_id}},
-      'kaltura_mediathek_category_id': {{kaltura_mediathek_category_id}}
+      'kaltura_mediathek_category_id': {{kaltura_mediathek_category_id}},
+      'skin': '{{skin}}'
     };
 
   })(window);
