--- a/app/assets/styles/utilities/mixins/island.scss
+++ b/app/assets/styles/utilities/mixins/island.scss
@@ -1,23 +1,10 @@
 @import 'utilities/variables';
 
-// -----------------------------------------------------------------------------
-// This file contains all application-wide Sass mixins.
-// -----------------------------------------------------------------------------
-
-
-
-
-/// Helper for `island` mixin for DRY padding values
-@mixin island-padding($padding) {
-  padding: $padding;
-
-  &::before {
-    right: $padding;
-    left: $padding;
-  }
-}
-
 /// Create an island with blocked-off content and a top border
+/// @access private
+/// @param {Color} $color [`$light-blue`] - color for top of island box
+/// @param {Length} $small-padding [`$container-spacing`] - padding of box on mobile
+/// @param {Length} $large-padding [false] - padding of box on desktop (false by default uses `$small-padding`)
 @mixin island($color: $light-blue, $small-padding: $container-spacing, $large-padding: false) {
 
   background: $very-light-grey;
@@ -48,3 +35,14 @@
 
 }
 
+/// Helper for `island` mixin for DRY padding values
+/// @access private
+/// @param {Length} $padding - padding to be applied to island
+@mixin island-padding($padding) {
+  padding: $padding;
+
+  &::before {
+    right: $padding;
+    left: $padding;
+  }
+}
