--- a/app/assets/styles/utilities/mixins/images.scss
+++ b/app/assets/styles/utilities/mixins/images.scss
@@ -1,9 +1,16 @@
 @import 'utilities/variables';
 
+/// Overlay Gradient for images for a better contrast to the text on the image
+/// @access public
+/// @param {Number} $percentage [65%] - percentage of top position to add gradient
+@mixin image-gradient($percentage: 65%) {
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0) $percentage, #000 100%);
+}
+
 /// Fit image to box - stretch image up to fill new ratio
 /// @access public
-/// @param {List} $current-ratio - current ratio of image in the format (W, H)
-/// @param {List} $new-ratio - intended new ratio of image in the format (W, H)
+/// @param {List} $current-ratio - current ratio of image in the format `(W, H)`
+/// @param {List} $new-ratio - intended new ratio of image in the format `(W, H)`
 @mixin fit-image-to-box($current-ratio, $new-ratio) {
   $current-width: nth($current-ratio, 1);
   $current-height: nth($current-ratio, 2);
