--- a/app/assets/styles/utilities/mixins/interactions.scss
+++ b/app/assets/styles/utilities/mixins/interactions.scss
@@ -1,6 +1,7 @@
 @import 'utilities/variables';
 
 /// Mixin to help specifying styles for all kinds of interaction at once
+/// @access public
 /// @param {Bool} $self [false] - Whether to include default state as well
 @mixin on-interaction($self: false) {
   @if $self {
@@ -20,7 +21,8 @@
 }
 
 /// Mixin to add an arrow icon to element e.g. alongside 'Mehr Artikel'
-/// @param {String} $direction - direction for arrow linked to filename e.g. arrow-down.svg
+/// @access public
+/// @param {String} $direction - direction for arrow linked to filename e.g. `arrow-down.svg`
 @mixin arrow-icon($direction: false) {
   content: '';
   display: inline-block;
