--- a/app/assets/styles/utilities/mixins/widths.scss
+++ b/app/assets/styles/utilities/mixins/widths.scss
@@ -1,17 +1,8 @@
 @import 'utilities/variables';
 
-@mixin content-width($method: 'margin') {
-  @include media('>desktop-laptop') {
-    #{$method}-right: $sidebar-width + $container-spacing;
-  }
-}
-
-@mixin article-body-width($method: 'margin') {
-  @include media('>desktop-laptop') {
-    #{$method}-right: $sidebar-width + (3 * $container-spacing);
-  }
-}
-
+/// Main layout constructor used for elements that take the 'main' layout
+/// Adds max width and centering on snmall/medium screens
+/// @access public
 @mixin main-layout {
   width: 100%;
 
@@ -26,5 +17,23 @@
   @include media('<=desktop-laptop') {
     margin-left: auto;
     margin-right: auto;
+  }
+}
+
+/// Adds right-hand-side spacing to offset sidebar on article page
+/// @access public
+/// @param {String} $method ['margin'] - method to use for spacing
+@mixin content-width($method: 'margin') {
+  @include media('>desktop-laptop') {
+    #{$method}-right: $sidebar-width + $container-spacing;
+  }
+}
+
+/// Adds right-hand-side spacing to offset sidebar *and* gutter on article page
+/// @access public
+/// @param {String} $method ['margin'] - method to use for spacing
+@mixin article-body-width($method: 'margin') {
+  @include media('>desktop-laptop') {
+    #{$method}-right: $sidebar-width + (3 * $container-spacing);
   }
 }
