--- a/app/assets/styles/base/advertising.scss
+++ b/app/assets/styles/base/advertising.scss
@@ -103,9 +103,17 @@ $skyscraper-width: 300px;
   }
 
   @include media('>mobile-portrait') {
+    width: calc(100% + #{(4 * $container-spacing)}); /* 1 */
+  }
+
+  @include media('>mobile-portrait', '<=desktop-laptop') {
     margin-top: 30px;
     margin-bottom: 55px;
-    width: calc(100% + #{(4 * $container-spacing)}); /* 1 */
+  }
+
+  @include media('>desktop-laptop') {
+    margin-top: 50px;
+    margin-bottom: 70px;
   }
 }
 
