refactored hosts to use without_wemf flag for pageview tracking

--- a/app/includes/__head_bottom.html
+++ b/app/includes/__head_bottom.html
@@ -32,7 +32,8 @@
       'kaltura_frontend_adless_video_player_id': {{kaltura_frontend_adless_video_player_id}},
       'kaltura_mediathek_video_player_id': {{kaltura_mediathek_video_player_id}},
       'kaltura_mediathek_category_id': {{kaltura_mediathek_category_id}},
-      'skin': '{{skin}}'
+      'skin': '{{skin}}',
+      'without_wemf'; '{{without_wemf}}'
     };
 
   })(window);
