--- a/app/includes/__head_bottom.html
+++ b/app/includes/__head_bottom.html
@@ -46,10 +46,28 @@
 <script src="//aka-cdn-ns.adtech.de/dt/common/DAC.js"></script>
 <script src="//www.google.com/recaptcha/api.js" async defer></script>
 
-{# Track on loading of page. #}
+{# Tracking on loading of page. #}
 <script src="{{ staticBasePath }}/client/tracking.bundled.js"></script>
-<script src="{{ staticBasePath }}/client/scripts/tracking/netmetrix.js"></script>
-{% if netMetrixNoScript != "" %}
+{% if (not without_wemf) %}
+<script>
+  if (typeof window.AZTracker !== 'undefined' && window.AZTracker.trackPageView) {
+    window.AZTracker.trackPageView({
+      domain: 'aznetz',
+      path: {
+        product: 'live',
+        sitename: '{{ skin }}',
+        view: 'page',
+        path: window.location.pathname,
+        event: 'pageview'
+      },
+      referer: document.referer,
+      screenWidth: screen.width,
+      screenHeight: screen.height
+    });
+  }
+</script>
+{% endif %}
+{% if (not without_wemf) and (netMetrixNoScript != "") %}
 <noscript id="trackingNoScript">
   <img src="{{ netMetrixNoScript }}" width="1" height="1" alt="">
 </noscript>
