--- a/app/layouts/dashboard.html
+++ b/app/layouts/dashboard.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="de-ch">
   <head>
     {% include "app/includes/__head_shared.html" %}
     {# Add webfont loading script, adds loadFont function  #}
