Finalise styleguide moving

--- a/app/includes/__head_bottom.html
+++ b/app/includes/__head_bottom.html
@@ -1,15 +1,6 @@
-<link rel="stylesheet" href="{{ staticBasePath }}/client/styles.css" />
+<link rel="stylesheet" href="{{ staticBasePath }}/client/styles/client.css" />
+
 {% include "app/includes/__head_shared.html" %}
-
-{# Add helper classes for JS and touch detection #}
-<script>
-  {% include 'client/scripts/html-classes.js' %}
-</script>
-
-{# Add webfont loading script, adds loadFont function  #}
-<script>
-  {% include 'client/scripts/webfont-loading.js' %}
-</script>
 
 <script>
   (function (global) {
