--- a/app/layouts/styleguide.html
+++ b/app/layouts/styleguide.html
@@ -10,20 +10,20 @@
           // Font storage name
           'az-fonts',
           // WOFF URL
-          '{{ staticBasePath }}/client/fonts/data-woff.css',
+          '{{ staticBasePath }}/fonts/data-woff.css',
           // WOFF2 URL
-          '{{ staticBasePath }}/client/fonts/data-woff2.css'
+          '{{ staticBasePath }}/fonts/data-woff2.css'
         );
       })(window);
     </script>
 
-    <link rel="stylesheet" href="{{ staticBasePath }}/client/styles/client.css" />
-    <link rel="stylesheet" href="{{ staticBasePath }}/client/styles/styleguide.css" />
+    <link rel="stylesheet" href="{{ staticBasePath }}/styles/client.css" />
+    <link rel="stylesheet" href="{{ staticBasePath }}/styles/styleguide.css" />
   </head>
   <body class="styleguide-body">
     <div id="app" class="wrapper">{{ content }}</div>
-    <script src="{{ staticBasePath }}/client/styleguide.bundled.js"></script>
-    <script src="{{ staticBasePath }}/client/components.bundled.js"></script>
-    <script src="{{ staticBasePath }}/client/scripts/vendor/prism.min.js"></script>
+    <script src="{{ staticBasePath }}/styleguide.bundled.js"></script>
+    <script src="{{ staticBasePath }}/components.bundled.js"></script>
+    <script src="{{ staticBasePath }}/scripts/vendor/prism.min.js"></script>
   </body>
 </html>
